src/assets/styles/global.scss
@import '@/assets/styles/variables.scss';
// * {
//   border: 3px solid red;
// }
*,
*::before,
*::after {
  box-sizing: border-box;
}
.card {
  border-radius: 8px;
  background-color: $surface2;
  display: flex;
  overflow: hidden;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  gap: 8px;
  align-self: stretch;
  position: relative;
  transition: 0.2s ease;
  will-change: background-color;
  &:hover {
    background-color: darken($surface2, 1%);
    .card-header {
      filter: grayscale(0.5);
    }
  }
  .button {
    display: inline-flex;
    margin-top: 24px;
  }
  .card-header {
    height: 168px;
    transition: 0.2s ease;
    img {
      object-fit: cover;
      object-position: center;
      width: 100%;
      height: 100%;
    }
  }
  .card-date {
    font-size: 12px;
    color: $neutral;
    margin-bottom: 8px;
  }
  .card-title {
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    font-weight: 600;
  }
  .card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 8px;
    height: 100%;
    color: $contentOnSurface;
    padding: 16px;
  }

  .card-link {
    &::after {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      z-index: 1;
      content: '';
    }
  }
}
.cards-wrapper-3 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 16px;
  width: 100%;

  @media (width >=768px) {
    grid-template-columns: repeat(2, 1fr);
  }

  @media (width >=1024px) {
    grid-template-columns: repeat(3, 1fr);
  }

  &.cards-wrapper-3.list {
    grid-template-columns: 1fr !important;
  }
}

.cards-wrapper-2 {
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: minmax(240px, min-content);
  gap: 16px;
  width: 100%;

  @media (width >=768px) {
    grid-template-columns: repeat(2, 1fr);
  }
}

.content {
  padding-top: 24px;
  padding-bottom: 24px;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 24px;
  display: flex;
  width: 100%;

  @media (width >=768px) {
    padding-top: 48px;
    padding-bottom: 48px;
  }
  @media (width >=1200px) {
    padding-top: 72px;
    padding-bottom: 72px;
    gap: 64px;
  }
}

.section-header {
  align-self: stretch;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  display: flex;
}

.section-banner {
  .banner {
    height: 300px;
    width: 100%;
    position: relative;
    text-align: center;

    &__content {
      position: inherit;
      z-index: 1;
      height: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: column;
      padding: 24px 16px;
      gap: 32px;

      @media (width >= 768px) {
        padding: 32px;
        // gap: 32px;
      }
      @media (width >= 1024px) {
        padding: 48px;
        gap: 48px;
      }
      @media (width >= 1200px) {
        padding: 64px;
        gap: 64px;
      }
    }

    &__image {
      position: absolute;
      top: 0;
      left: 0;
    }

    img {
      object-fit: cover;
      object-position: center;
      width: 100%;
      height: 100%;
    }
  }
}

.section-title,
.section-subtitle {
  font-size: 40px;
  font-family: Koulen;
  font-weight: 400;
  line-height: 1;
  width: 100%;
  @media (width >=768px) {
    font-size: 48px;
  }
  @media (width >=1024px) {
    font-size: 56px;
  }
  @media (width >=1200px) {
    font-size: 64px;
  }
}

.button {
  display: flex;
  border-radius: 8px;
  text-decoration: none;
  align-items: center;
  justify-content: center;
  transition: 0.1s ease;
  border: 0;
  cursor: pointer;

  &:active {
    position: relative;
    transform: translateY(1px);
  }

  &--primary {
    background-color: $surfacePrimary;
    color: $contentOnPrimary;

    &:hover {
      background-color: darken($surfacePrimary, 5%);
    }

    &:active {
      background-color: darken($surfacePrimary, 8%);
    }
  }

  &--medium {
    height: 48px;
    padding: 0 24px;
    font-size: 14px;
  }
}

.position-absolute {
  position: absolute;
}

.text-primary {
  color: $primary;
}

.br-8 {
  border-radius: 8px;
}

.br-16 {
  border-radius: 16px;
}

.text-body {
  color: $contentBody;
}

.text-neutral {
  color: $neutral;
}

.text-tertiary {
  color: $tertiary;
}

.background-tertiary {
  background-color: $backgroundTertiary;
  color: $contentBody;
}

.container {
  max-width: 1200px;
  width: 100%;
  padding: 0 24px;
  margin: 0 auto;
}

.py-72 {
  padding-top: 72px;
  padding-bottom: 72px;
}

.pt-64 {
  padding-top: 64px;
}

.px-64 {
  padding-left: 64px;
  padding-right: 64px;
}

.section-title {
  display: flex;
  flex-direction: column;
}

h1,
h3 {
  font-family: 'Koulen', sans-serif;
  line-height: 1;
  margin: 0;
}

h1 {
  font-size: 64px;
}

h3 {
  font-size: 48px;
}

h4 {
  font-size: 16px;
  font-weight: 600;
  margin: 0;
}

p {
  margin: 0;
  font-size: 14px;
  line-height: 1.3;

  + p {
    margin-top: 16px;
  }
}

.header {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 450px;
  position: relative;

  @media (width >=1024px) {
    grid-template-rows: 640px;
  }

  .header-image {
    object-fit: cover;
    object-position: center;
    width: 100%;
    height: 100%;
    &--left {
      object-position: center right;
    }
    &--right {
      object-position: center left;
    }
  }

  &__content {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 80px;
    width: 100%;
    display: flex;
    gap: 16px;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;

    img {
      width: 176px;
      height: auto;
    }
  }
}

#app {
  padding: 32px 0;
  font-family: 'Inter', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
  font-weight: 400;
}

// html,
// body,
// #app {
//   height: 100%;
// }

body {
  background-color: $background;
}

